--- a/package.json
+++ b/package.json
@@ -13,6 +13,12 @@
   "dependencies": {
   },
   "devDependencies": {
+    "cradle": ">=0.6.7",
+    "expect.js": ">= 0.1.2",
+    "mocha": ">= 1.0.1",
+    "mongodb": ">= 0.0.1",
+    "redis": ">= 0.10.1",
+    "tingodb": ">= 0.0.1"
   },
   "description": "Node-cqrs-saga is a node.js module that helps to implement the sagas in cqrs. It can be very useful as domain component if you work with (d)ddd, cqrs, eventdenormalizer, host, etc.",
   "keywords": [
