--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "tolerance": "1.0.0"
   },
   "devDependencies": {
+    "azure-storage": "^0.3.3",
     "cradle": ">=0.6.7",
     "expect.js": ">= 0.1.2",
     "mocha": ">= 1.0.1",
