--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   },
   "dependencies": {
     "async": "0.9.0",
-    "debug": "2.1.3",
+    "debug": "^2.2.0",
     "dotty": "0.0.2",
     "jsondate": "0.0.1",
     "lodash": "^3.7.0",
