--- a/package.json
+++ b/package.json
@@ -12,10 +12,10 @@
   },
   "dependencies": {
     "async": "0.9.0",
-    "debug": "^2.2.0",
+    "debug": "2.2.0",
     "dotty": "0.0.2",
     "jsondate": "0.0.1",
-    "lodash": "^3.7.0",
+    "lodash": "3.9.1",
     "node-uuid": "1.4.3",
     "tolerance": "1.0.0"
   },
