--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "jsondate": "0.0.1",
     "lodash": "3.9.3",
     "node-uuid": "1.4.3",
-    "tolerance": "1.0.0"
+    "tolerance": "1.0.0",
+    "trycatch": "1.5.11"
   },
   "devDependencies": {
     "azure-storage": ">=0.3.0",
