--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "lodash": "3.9.3",
     "node-uuid": "1.4.3",
     "tolerance": "1.0.0",
-    "trycatch": "1.5.11"
+    "tryc": "0.1.0"
   },
   "devDependencies": {
     "azure-storage": ">=0.3.0",
