--- a/package.json
+++ b/package.json
@@ -11,11 +11,11 @@
     "lib": "./lib"
   },
   "dependencies": {
-    "async": "1.2.1",
+    "async": "^1.3.0",
     "debug": "2.2.0",
     "dotty": "0.0.2",
     "jsondate": "0.0.1",
-    "lodash": "3.9.3",
+    "lodash": "^3.10.0",
     "node-uuid": "1.4.3",
     "tolerance": "1.0.0",
     "trycatch": "1.5.11"
