--- a/package.json
+++ b/package.json
@@ -18,8 +18,7 @@
     "lodash": "3.10.1",
     "node-uuid": "1.4.3",
     "parent-require": "1.0.0",
-    "tolerance": "1.0.0",
-    "trycatch": "1.5.19"
+    "tolerance": "1.0.0"
   },
   "devDependencies": {
     "azure-storage": ">=0.3.0",
