--- a/package.json
+++ b/package.json
@@ -16,9 +16,9 @@
     "dotty": "0.0.2",
     "jsondate": "0.0.1",
     "lodash": "4.11.1",
-    "node-uuid": "1.4.7",
     "parent-require": "1.0.0",
-    "tolerance": "1.0.0"
+    "tolerance": "1.0.0",
+    "uuid": "^3.0.0"
   },
   "devDependencies": {
     "azure-storage": ">=0.3.0",
