--- a/package.json
+++ b/package.json
@@ -12,13 +12,13 @@
   },
   "dependencies": {
     "async": "1.5.2",
-    "debug": "2.2.0",
+    "debug": "2.3.3",
     "dotty": "0.0.2",
     "jsondate": "0.0.1",
-    "lodash": "4.11.1",
+    "lodash": "4.17.2",
     "parent-require": "1.0.0",
     "tolerance": "1.0.0",
-    "uuid": "^3.0.0"
+    "uuid": "3.0.0"
   },
   "devDependencies": {
     "azure-storage": ">=0.3.0",
