--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "cradle": ">=0.6.7",
     "eslint": ">=1.0.0",
     "expect.js": ">= 0.1.2",
-    "mocha": ">= 1.0.1",
+    "mocha": "3.x.x",
     "mongodb": ">= 0.0.1",
     "redis": ">= 0.10.1",
     "tingodb": ">= 0.0.1"
