--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   },
   "dependencies": {
     "async": "1.5.2",
-    "debug": "3.0.1",
+    "debug": "3.1.0",
     "dotty": "0.0.2",
     "jsondate": "0.0.1",
     "lodash": "4.17.4",
@@ -26,7 +26,7 @@
     "eslint": ">=1.0.0",
     "expect.js": ">= 0.1.2",
     "mocha": "3.x.x",
-    "mongodb": ">= 0.0.1",
+    "mongodb": "2.1.x",
     "redis": ">= 0.10.1",
     "tingodb": ">= 0.0.1"
   },
